<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<ListPreference
		android:key="@string/pref_order_key"
		android:title="@string/pref_order_title"
		android:dialogTitle="@string/pref_order_title"
		android:summary="%s"
		android:entries="@array/pref_order_entries"
		android:entryValues="@array/pref_order_values"
		android:defaultValue="@string/pref_order_default" />
		
	<ListPreference
		android:key="@string/pref_sort_key"
		android:title="@string/pref_sort_title"
		android:dialogTitle="@string/pref_sort_title"
		android:summary="%s"
		android:entries="@array/pref_sort_entries"
		android:entryValues="@array/pref_sort_values"
		android:defaultValue="@string/pref_sort_default" />
		
	<EditTextPreference
		android:key="@string/pref_search_key"
		android:title="@string/pref_search_title" />
</PreferenceScreen>